# dicom-classifier

./: .gitignore  CMakeLists.txt  README.md  build.sh  checker.sh
DicomClassifier/: DicomClassifier.pro  DicomReader.cpp  DicomReader.h  fcm.cpp  fcm.h  main.cpp
DicomClassifier/benchmark/: memcount.cpp  memcount.hpp  system_metrics.cpp  system_metrics.hpp
DicomClassifier/dicom/: DicomReader.cpp  DicomReader.h  dicomutils.cpp  dicomutils.h
DicomClassifier/fcm/: fcm.cpp  fcm.h
DicomClassifier/gbdt/: FastBDT.h
DicomClassifier/kmeans/: kmeans.h
DicomClassifier/knn/: knn.cpp  knn.h
DicomClassifier/metrics/: performance.cpp  performance.h
DicomClassifier/neural_net/: config.h  network.h  nn.h  node.h  nodes.h  tiny_dnn.h
DicomClassifier/neural_net/activations/: activation_layer.h  asinh_layer.h  elu_layer.h  leaky_relu_layer.h  relu_layer.h  selu_layer.h  sigmoid_layer.h  softmax_layer.h  softplus_layer.h  softsign_layer.h  tanh_layer.h  tanh_p1m2_layer.h
DicomClassifier/neural_net/cereal/: access.hpp  cereal.hpp
DicomClassifier/neural_net/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
DicomClassifier/neural_net/cereal/details/: helpers.hpp  polymorphic_impl.hpp  traits.hpp
DicomClassifier/neural_net/cereal/types/: array.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  common.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  memory.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  vector.hpp
DicomClassifier/neural_net/core/: backend.h  backend_avx.h  backend_tiny.h  session.h
DicomClassifier/neural_net/core/framework/: device.fwd.h  device.h  op_kernel.h  program.h  program_manager.h  tensor.h  tensor_utils.h
DicomClassifier/neural_net/core/kernels/: avx_deconv2d_back_kernel.h  avx_deconv2d_kernel.h  conv2d_grad_op.h  conv2d_grad_op_avx.h  conv2d_op.h  conv2d_op_avx.h  conv2d_op_internal.h  conv2d_op_libdnn.h  conv2d_op_nnpack.h  conv2d_op_opencl.h  fully_connected_grad_op.h  fully_connected_op.h  fully_connected_op_avx.h  fully_connected_op_cblas.h  fully_connected_op_intel_mkl.h  fully_connected_op_internal.h  fully_connected_op_nnpack.h  global_avepool_grad_op.h  global_avepool_op.h  global_avepool_op_avx.h  global_avepool_op_internal.h  gru_cell_grad_op.h  gru_cell_op.h  gru_cell_op_internal.h  lstm_cell_grad_op.h  lstm_cell_op.h  maxpool_grad_op.h  (+16 more)
DicomClassifier/neural_net/io/: cifar10_parser.h  display.h  layer_factory.h  mnist_parser.h
DicomClassifier/neural_net/layers/: arithmetic_layer.h  average_pooling_layer.h  average_unpooling_layer.h  batch_normalization_layer.h  cell.h  cells.h  concat_layer.h  convolutional_layer.h  deconvolutional_layer.h  dropout_layer.h  fully_connected_layer.h  global_average_pooling_layer.h  gru_cell.h  input_layer.h  l2_normalization_layer.h  layer.h  layers.h  linear_layer.h  lrn_layer.h  lstm_cell.h  max_pooling_layer.h  max_unpooling_layer.h  partial_connected_layer.h  power_layer.h  quantized_convolutional_layer.h  quantized_deconvolutional_layer.h  quantized_fully_connected_layer.h  recurrent_layer.h  rnn_cell.h  slice_layer.h  zero_pad_layer.h
DicomClassifier/neural_net/lossfunctions/: loss_function.h
DicomClassifier/neural_net/models/: alexnet.h
DicomClassifier/neural_net/optimizers/: optimizer.h
DicomClassifier/neural_net/util/: aligned_allocator.h  colored_print.h  deform.h  deserialization_helper.h  gradient_check.h  graph_visualizer.h  image.h  math_functions.h  nms.h  nn_error.h  parallel_for.h  product.h  random.h  serialization_functions.h  serialization_helper.h  serialization_layer_list.h  target_cost.h  util.h  weight_init.h
DicomClassifier/random_forest/: ArgumentHandler.cpp  Forest.cpp  Forest.h  ForestClassification.cpp  ForestProbability.cpp  ForestProbability.h  ForestRegression.cpp  ForestSurvival.cpp  ForestSurvival.h  Tree.cpp  Tree.h  TreeClassification.cpp  TreeProbability.cpp  TreeRegression.cpp  TreeSurvival.cpp  rf.cpp  rf.h
DicomClassifier/svm/: svm_util.cpp  svm_util.h
DicomClassifier/tiny_dnn/: config.h  nodes.h
DicomClassifier/tiny_dnn/cereal/: access.hpp  cereal.hpp
DicomClassifier/tiny_dnn/util/: deserialization_helper.h  image.h  serialization_functions.h  serialization_helper.h  util.h
Otsu/C_v/paralelizado/: a.out  otsu_omp_p.c
Otsu/C_v/serial/: a.out  mypgm.h  otsu_serial.c
Otsu/Py_v/: otsu_paralelizado.py  otsu_secuencial.py
Preprocesamiento/Adaptive Median Filter/: adaptativemedianfilter.cpp
Preprocesamiento/adaptativemedianfilter/: adaptativemedianfilter.cpp  adaptativemedianfilter.h
Preprocesamiento/clahe/: clahe.cpp  clahe.h
Preprocesamiento/gaussian/: gaussian.cpp  gaussian.h
Preprocesamiento/hybridmedianfilter/: hybridmedianfilter.cpp  hybridmedianfilter.h
Segmentacion/: morfologia_matematica.cpp  morfologia_matematica.h
Segmentacion/Canny/: canny.cpp  canny.h
Segmentacion/Otsu/: Otsu_Bin.cpp  Otsu_Bin.h
Segmentacion/Regiongrowing/: Regiongrowing.cpp  regiongrowing.h
Segmentacion/morfologia_matematica/: main.cpp  morfologia_matematica.cpp  regiongrowing.h
canny/: canny.cpp  canny.h
data/: labels.csv
example-canny/canny/: CMakeLists.txt  main.cpp
example-hybridmedianfilter/probandoConLibreriaW/: CMakeLists.txt  main.cpp
examples/: README.md  cnn.cpp  fcm.cpp  gbdt.cpp  kmeans.cpp  knn.cpp  random_forest.cpp  read-dicom-image.cpp  svm-multiclass.cpp  svm.cpp
examples-Preprocesamiento/: adaptivemedian.cpp  clahe.cpp  gaussian_filter.cpp  hybridmedianfilter.cpp
examples-Segmentacion/: CMakeLists.txt  morfologia_matematica.cpp  regiongrowing.cpp
examples-Segmentacion/Otsu/: CMakeLists.txt  main.cpp
examples-Segmentacion/Regiongrowing/: Regiongrowing.cpp
examples-Segmentacion/canny_libreria/: CMakeLists.txt  main.cpp
examples-Segmentacion/morfologia_matematica/: CMakeLists.txt  morfologia_matematica.cpp
examples/checked/: knn.cpp  mlp.cpp  svm-2classes.cpp
metrics/: eval_metrics.cpp  fcm.cpp  kmeans.cpp
metrics/performance/: benchmark.cpp  benchmark.h
testing/fcm/: test.m
(+42 files in other folders)
